<resources>
    <string name="app_name">ParkMe</string>
    <string name="action_settings">Settings</string>
    <string name="common_error_msg">We encountered unexpected exception</string>
    <string name="server_error">We encountered unexpected problem</string>
    <string name="server_error_under_maintainance">Server is under maintenance</string>
    <string name="user_name_or_mobile">User Name or Mobile</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_with_fb">SIGNUP WITH FACEBOOK</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="user_email">Email</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="loading">Loading...</string>
    <string name="ok">OK</string>
    <string name="network_issue">Network Issue</string>
    <string name="please_check_your_internet">No Internet!\nPlease check your internet connection</string>
    <string name="error_title">Error</string>
    <string name="submit">SUBMIT</string>
    <string name="terms_service_string">you are agreeing to our </string>
    <string name="vehicle_number">Vehicle</string>
    <string name="mobile_number">Mobile</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="password_missmatch">Password Mismatch!</string>
    <string name="enter_valid_mobile_number">Enter valid mobile number</string>
    <string name="enter_vehicle_number">Enter vehicle number</string>
    <string name="registering">Processing...</string>
    <string name="facebook_app_id">755664101230470</string>
    <string name="signup">SIGN UP NOW</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="refer_and_earn"><![CDATA[Refer & Earn]]></string>
    <string name="help">Help</string>
    <string name="support">Support</string>
    <string name="button_ok">OK</string>
    <string name="no_network">No Network!</string>
    <string name="check_internet">Please check the internet connection.</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="home">Home</string>
    <string name="reset_inst_sent">PASSWORD IS SENT</string>
    <string name="check_spam">If you don\'t receive your password in few minutes then check your spam/junk folder</string>
    <string name="retake_pic">Retake Pic</string>
    <string name="from_gallery">From Gallery</string>
    <string name="map_api_key">AIzaSyBL4Yc491iZA31OMhZfui7wnoIb4Hq0gCQ</string>
    <string name="permission_required">Permission Required</string>
    <string name="cancel">Cancel</string>
    <string name="read_phone_state_permission_not_available">Please enable "Phone" permission under Permission section, as it is required to get the device ID to identify you</string>
    <string name="location_permission_not_available">Please enable "Location" permission under Permission section, as it is required identify your location</string>
    <string name="unable_to_fetch_slots">Something went wrong! \n Unable to fetch parking slots.</string>
    <string name="retry">Retry</string>
    <string name="start_parking">START MY PARKING</string>
    <string name="forgot">Forgot</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="by_register">BY REGISTERING</string>
    <string name="next">NEXT</string>
    <string name="waiting_for_location">Waiting for your location...</string>
    <string name="unable_to_locate">We are unable to find your location</string>
    <string name="location_error">Location Error</string>
    <string name="dash_board">Dashboard</string>
    <string name="rupee_symbol">\u20b9</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_start_parking">Start Parking</string>
    <string name="label_enter_slot">Enter Slot Number</string>
    <string name="label_your_parking_location">Your Parking Location</string>
    <string name="my_parkings">My Parkings</string>
    <string name="payments">Payments</string>
    <string name="rewards">Rewards</string>
    <string name="tutorial">Tutorial/Onboarding</string>
    <string name="refferals">Refferals</string>
    <string name="general">General</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="parking_name">Parking Name</string>
    <string name="per_hour">PER HOUR</string>
    <string name="slots_available_near">slots available near</string>
    <string name="select_parking_location">Please select parking location</string>
    <string name="title_activity_payment">Payment Summary</string>
    <string name="location_label">LOCATION</string>
    <string name="title_activity_test">Test</string>
    <string name="date_label">DATE</string>
    <string name="arrival_label">ARRIVAL</string>
    <string name="exit_label">EXIT</string>
    <string name="vehicle_number_label">VEHICLE</string>
    <string name="alloted_slot_label">ALLOTTED SLOT</string>
    <string name="price_label">PRICE</string>
    <string name="total_label">Grand Total</string>
    <string name="other_label">OTHER FEE</string>
    <string name="dollar_symbol">\u0024</string>
    <string name="you_have_parked_at">YOU HAVE PARKED AT</string>
    <string name="slot_number">SLOT NO</string>
    <string name="end_parking">END PARKING</string>
    <string name="unable_to_endparking">Unable to end Parking!</string>
    <string name="condratulation">CONGRATULATIONS</string>
    <string name="you_have_just_unlocked">You\'ve just unlocked 5 super\npremium badges. Collect 100\nbadges to get a premium access.</string>
    <string name="starting_the_park">Parking....</string>
    <string name="ending_park">Ending your park...</string>
    <string name="terms_of_service">  Terms of Service</string>
    <string name="checking_status">Checking status...</string>
    <string name="getting_slots">Getting parking locations...</string>
    <string name="pay_now">PAY NOW</string>
    <string name="action_search">Search</string>
    <string name="enter_any_username_password">Enter any random username and password to login</string>
    <string name="success">Success</string>
    <string name="signup_successful">Signup Successful</string>
    <string name="parkme">ParkMe</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="your_parking_details">Your Parking Details</string>
    <string name="vehicle_number_text">Vehicle Number :</string>
    <string name="no_vehicle_parked">No Vehicle Parked</string>
    <string name="slot_number_text">Slot Number :</string>
    <string name="close_button">Close Button</string>
    <string name="handle_payment">Handle Payment</string>
    <string name="handle_payment_here">Handle your payment part here.</string>
    <string name="navigation_menu">Navigation Menu</string>
    <string name="earned_badge">Earned badge</string>
    <string name="reset_image">Reset</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="move_crop_image">Move / resize to crop the picture</string>
    <string name="undo">Undo</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="test_user">Test User</string>
    <string name="test_vehicle">KA01MC2525</string>
    <string name="zero">0</string>
    <string name="park_name">Park Name</string>
    <string name="search">Search</string>
    <string name="notification">notification</string>
    <string name="two_hundred">200</string>


</resources>
