<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/normal_forgot_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginBottom="10dp"
            app:hintTextAppearance="@style/TextInputLayout">

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp" android:textColorHint="@color/hint_color"
                android:hint="@string/user_email" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name_layout"
            android:layout_margin="10dp"
            android:background="@drawable/button_backgnd"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reset_instruction_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:visibility="gone">

        <ImageView
            android:id="@+id/reset_success_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/help" />

        <TextView
            android:id="@+id/reset_inst_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reset_success_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/reset_inst_sent"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/spam_junk_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reset_inst_sent"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:text="@string/check_spam" />

        <Button
            android:id="@+id/sign_in_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spam_junk_textview"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_backgnd"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

    </RelativeLayout>

    <include layout="@layout/loading_layout" />
</RelativeLayout>