<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/start_parking_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<RelativeLayout
                android:id="@+id/ticker_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/dialog_header_background"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/ticker_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/profile_icon" />

                <TextView
                    android:id="@+id/ticker_sender_name"
                    style="@style/roboto_medium_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="14dp"
                    android:layout_toRightOf="@+id/ticker_image"
                    android:text="Suzzane"
                    android:textColor="@color/ticker_name_color" />

                <TextView
                    android:id="@+id/ticker_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/ticker_sender_name"
                    android:layout_below="@+id/ticker_sender_name"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/ticker_image"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="Maecenas consectetur enim quam, eget consec"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="15dp"
                    android:text="12:15 PM"
                    android:textColor="#a9aab9"
                    android:textSize="14dp" />
            </RelativeLayout>
-->
            <RelativeLayout
                android:id="@+id/parked_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:visibility="gone">


                <TextView
                    android:id="@+id/you_have_parked"
                    style="@style/roboto_medium_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/you_have_parked_at"
                    android:textColor="#abafb3"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/parked_area_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/you_have_parked"
                    android:layout_below="@+id/you_have_parked"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textAllCaps="true"
                    android:textColor="#6a6f7b"
                    android:textSize="17dp" />

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/endpark_price_bg"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/parking_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/dollar_symbol"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/parking_price"
                        android:layout_centerHorizontal="true"
                        android:text="@string/per_hour"
                        android:textColor="#ffcebe"
                        android:textSize="11dp" />
                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>


        <Button
            android:id="@+id/start_parking_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_backgnd"
            android:gravity="center"
            android:text="@string/start_parking"
            android:textColor="@color/white" />

    </RelativeLayout>

    <include layout="@layout/loading_layout" />

</RelativeLayout>